# List-Implementation

./: CMakeLists.txt  README.md
Include/: OneWayList.hpp
Source/: OneWayList.cpp  main.cpp
Test/: listTest.cpp
